--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "myJS.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dashboard": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,6 @@
   },
   "homepage": "https://github.com/tmac24utm/Dashboard#readme",
   "dependencies": {
-    "express": "^4.15.2",
-    "http": "0.0.0",
+    "express": "^4.15.2"
   }
 }
