--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.15.2",
     "forecast": "^0.3.2",
+    "http": "0.0.0",
     "nodemon": "^1.11.0",
     "ws": "^2.2.2"
   }
